# fantasy-premier-league

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt
.agent/workflows/: finish_checklist.md  python_guidelines.md
.claude/: settings.json
.github/workflows/: ci.yml
backend/: analysis_service.py  form_service.py  fpl_service.py  history_service.py  inspect_history.py  main.py  ml_service.py  models.py  requirements.txt  team_details.py
docs/: API.md
frontend/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  output.css  utils.js  utils.test.js
frontend/src/components/: AnalysisResult.jsx  AuthModal.jsx  ClubViewer.jsx  ComparisonChart.jsx  DreamTeam.jsx  FixtureTicker.jsx  FormAnalysis.jsx  GameweekRangeSlider.jsx  HistoryModal.jsx  LeagueTable.jsx  LiveFixtures.jsx  MarketOverview.jsx  PitchView.jsx  PlayerExplorer.jsx  PlayerPopover.jsx  PointsHistoryChart.jsx  PolymarketWidget.jsx  Solver.jsx  SquadDisplay.jsx  TeamHeader.jsx  TeamInput.jsx  TeamInput.test.jsx  TeamPopover.jsx  Top1000Analysis.jsx  TopManagersAnalysis.jsx  utils.js  (+1 more)
frontend/tests/: example.spec.js
mobile/: README.md  analysis_options.yaml  build.yaml  pubspec.yaml
mobile/integration_test/: app_test.dart
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
tests/: conftest.py  test_business_logic.py  test_endpoints.py  test_health.py  test_models.py
(+161 files in other folders)
