[project]
name = "fantasy-premier-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
]
