[project]
name = "fantasy-premier-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "polars>=1.35.2",
    "pulp>=3.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "dspy-ai>=2.5.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pyright>=1.1.0",
    "ruff>=0.9.0",
]

[tool.pyright]
pythonVersion = "3.12"
include = ["backend", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["SIM108", "SIM102", "SIM105", "RUF012", "RUF005", "RUF013", "B904", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
